# stfu-notify

./: Cargo.toml  LICENSE  README.md  install.sh  stfu-notify-daemon.service
