[package]
name = "stfu-notify"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.7"
fltk-theme = "0.4.2"

[[bin]]
name = "server"

[[bin]]
name = "client"

[[bin]]
name = "gui"
